--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Jalen Freeman</h1>
         <p>Here is an edit</p>
+        <p>Here is a second edit</p>
     </body>
 </html>
