--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
     <head>
         <title>CSCE 190: Jalen Freeman</title>
+        <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
         <h1>Jalen Freeman</h1>
-        <p>Here is an edit</p>
-        <p>Here is a second edit</p>
+        <h2>About me</h2><div class="about">Here is about me.</div>
+        <h2>Skills</h2><div class="skills">Here are my skills.</div>
+        <h2>Highlighted projects</h2><div class="projects">Here are my projects.</div>
+        <h2>Contact me</h2><div class="contact">Here is my contact information.</div>
     </body>
 </html>
