--- a/index.html
+++ b/index.html
@@ -15,15 +15,33 @@
         <div class="projects">
             <!-- Problem Statement Assignment -->
             <section class="project">
-                <a href="CSCE190_Problem Statement.pdf">
+                <a href="files/CSCE190_Problem Statement.pdf">
                     <h3>Problem Statement</h3>
                 </a>
-                <a href="CSCE190_Problem Statement.pdf">
-                    <img src="problemstatementimg.png">
+                <a href="files/CSCE190_Problem Statement.pdf">
+                    <img src="images/problemstatementimg.png" width="300" height="300">
                 </a>
                 <p>Busy college students need a more efficient way to manage their time and 
                     academic responsibilities, helping them to balance coursework with personal life 
                     while preparing them for future careers.</p>
+            </section>
+
+            <!--Affinity Diagram Assignment -->
+            <section class="project">
+                <a href="files/CSCE190_Affinity Diagram.pdf">
+                    <h3>Affinity Diagram</h3>
+                </a>
+                <a href="files/CSCE190_Affinity Diagram.pdf">
+                    <img src="images/CSCE190_Affinity Diagram.png" width="300" height="300">
+                </a>
+                <p>
+                    An affinity diagram for a project to help college student manage their time and responsibilites.
+                    The affinity diagram has 8 clusters: Audience, Management, Needed Staff, Starting Project, Marketing/Advertising, Pricing, Interface, and Features.
+                    Across these clusters, there are 24 ideas. 
+                    To start, I made notes about what happened to come to mind about this idea. Then, I grouped similar ideas together and named the cluster. 
+                    While completing this exercise, I realized how many different factors go into creating a project. 
+                    It was interesting to see all of the different ideas go from random to an organized system.
+                </p>
             </section>
         </div>
         <h2>Contact me</h2><div class="contact">Here is my contact information.</div>
