Project Management 04: Sketches and CSS updates

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h3>Affinity Diagram</h3>
                 </a>
                 <a href="files/CSCE190_Affinity Diagram.pdf">
-                    <img src="images/CSCE190_Affinity Diagram.png" width="300" height="300">
+                    <img src="images/CSCE190_Affinity Diagram.png">
                 </a>
                 <p>
                     An affinity diagram for a project to help college student manage their time and responsibilites.
@@ -41,6 +41,26 @@
                     To start, I made notes about what happened to come to mind about this idea. Then, I grouped similar ideas together and named the cluster. 
                     While completing this exercise, I realized how many different factors go into creating a project. 
                     It was interesting to see all of the different ideas go from random to an organized system.
+                </p>
+            </section>
+
+            <!--Sketches Assignment-->
+            <section class="project">
+                <a href="files/Project Management 04.pdf">
+                    <h3>Sketches</h3>
+                </a>
+                <a href="files/Project Management 04.pdf">
+                    <img src="images/Sketch1.png">
+                </a>
+                <p>
+                    Sketch 1: 
+                    The homepage depicts a calendar with dots representing the number of tasks on each day. Additionally, it highlights tasks specific to the current day.<br>
+                    
+                    Sketch 2:
+                    This is a task creation screen where users can create new tasks to organize. It includes title, deadline, priority by star system, repeat, and alerts. <br>
+                    
+                    Sketch 3:
+                    Task Schedule contains all imported, upcoming tasks—colored-coded categories with mark-as-done boxes. Ability to filter by certain parameters. AI suggestions on when to complete tasks based on priority and number of tasks.                     
                 </p>
             </section>
         </div>
