Project Management 05: Paper Prototype (Only HTML changes)

--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@
                     Task Schedule contains all imported, upcoming tasks—colored-coded categories with mark-as-done boxes. Ability to filter by certain parameters. AI suggestions on when to complete tasks based on priority and number of tasks.                     
                 </p>
             </section>
+
+            <!--Paper Prototype Assignment-->
+            <section class="project">
+                <a href="https://youtu.be/x7eLqW5yusA?si=fG_zL-8jVrw_Mk5O">
+                    <h3>Prototype</h3>
+                </a>
+                <a href="https://youtu.be/x7eLqW5yusA?si=fG_zL-8jVrw_Mk5O">
+                    <img src="images/prototype.jpg">
+                </a>
+                <p>This paper prototype illustrates a time management app created to assist 
+                    users in efficiently organizing tasks, events, and notifications.
+                    It shows the basic displays and user engagements related to the app's features.
+                </p>
+            </section>
         </div>
         <h2>Contact me</h2><div class="contact">Here is my contact information.</div>
     </body>
