Portfolio 1: Mission Statement

--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <body>
         <h1>Jalen Freeman</h1>
 
-        <h2>About me</h2><div class="about">Here is about me.</div>
+        <!-- About Me -->
+        <h2> About Me </h2>
+        <div class="about">
+            <img src="images/kfp_mepic.jpg">
+                <p>
+                Hey! My name is Jalen Freeman. I am a student at the University of South Carolina studying Computer Engineering.
+                 I am passionate about data and AI to create solutions that advance the lives of others and make positive impact. 
+                 Having earned my associate's degree in Culinary Arts Technology and a cerificate in Baking and Pastry Arts, 
+                 I bring a unique sense of creativity and precision.
+                 My mission is to be a force that drives meaningful change and using my techinal skills to help others. 
+                </p>
+        </div>
 
         <h2>Skills</h2><div class="skills">Here are my skills.</div>
         
