PF4: Linking Resume

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
                 </p>
         </div>
 
-        <h2>Skills</h2><div class="skills">Here are my skills.</div>
+        <h2>Skills</h2>
+        <div class="skills">
+            <p><b>Resume: </b><a href="KJFreemanResume11.2024">Download here</a></p>
+        </div>
         
         <h2>Highlighted projects</h2>
         <div class="projects">
