--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <h2>Skills</h2>
         <div class="skills">
-            <p><b>Resume: </b><a href="KJFreemanResume11.2024">Download here</a></p>
+            <p><b>Resume: </b><a href="files/KJFreemanResume11.2024.pdf">Download here</a></p>
         </div>
         
         <h2>Highlighted projects</h2>
