PF5: Addition Repo

--- a/index.html
+++ b/index.html
@@ -91,7 +91,18 @@
                     It shows the basic displays and user engagements related to the app's features.
                 </p>
             </section>
+
+            <section class="project">
+                <a href="https://github.com/kjalenfreeman/Portfolio5">
+                <h3>Algorithmic Design Projects</h3>
+                </a>
+                <a href="https://github.com/kjalenfreeman/Portfolio5">
+                <img src="images/190pic.jpg">
+                </a>
+                <p>Java projects from CSCE 145.</p>
+            </section>
         </div>
-        <h2>Contact me</h2><div class="contact">Here is my contact information.</div>
+        <h2>Contact me</h2>
+        <div class="contact">Email: kandicef@email.sc.edu</div>
     </body>
 </html>
