--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CSCE 190: Jalen Freeman</title>
+        <title>Kandice Jalen Freeman</title>
         <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
